repair scrollbars into segments of panel to admin

--- a/admin/views/assets/sass/theme/_dashboard-sidebarLeft.scss
+++ b/admin/views/assets/sass/theme/_dashboard-sidebarLeft.scss
@@ -7,9 +7,12 @@
 	top: 0;
 	left: 0;
 	min-height: 100vh;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	z-index: 9999999;
+	overflow-x: hidden;
+	overflow-y: scroll;
+
 
 	&.show{
 		display: block;
@@ -33,6 +36,25 @@
 			width: 0;
 			pointer-events: none;
 		}
+		
+		/* ANCHO DE LA BARRA DE SCROLL */
+		&::-webkit-scrollbar {width: 7px;}
+		/* Estilos barra (thumb) de scroll */
+		&::-webkit-scrollbar-thumb {background: transparent;}
+		&::-webkit-scrollbar-thumb:active {background-color: #999999;}
+		&::-webkit-scrollbar-thumb:hover {background: #b3b3b3;box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);}
+		/* Estilos track de scroll */
+		&::-webkit-scrollbar-track {background: #e1e1e1;border-radius: 4px;}
+		&::-webkit-scrollbar-track:hover, &::-webkit-scrollbar-track:active {background: #d4d4d4;}
+		/* scrollling */
+		/* ANCHO DEL SCROLLING */
+		&::-webkit-scrollbar {width: 7px;}
+		&::-webkit-scrollbar-thumb {background: #cccc;border-radius: 4px;}
+		&::-webkit-scrollbar-thumb:active {background: #999999;}
+		&::-webkit-scrollbar-thumb:hover {background: #b3b3b3;box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);}
+		/* FONDO DEL SCROLL */
+		&::-webkit-scrollbar-track {background: $dashboard-color;}
+		&::-webkit-scrollbar-track:active, &::-webkit-scrollbar-track:hover {background: $dashboard-color;}
 	}
 
 	&--c{
@@ -62,23 +84,6 @@
 			opacity: 1;
 			overflow-y: auto;
 		}
-
-		&::-webkit-scrollbar { width: 0;}
-		/* Estilos barra (thumb) de scroll */
-		&::-webkit-scrollbar-thumb {background: transparent;}
-		&::-webkit-scrollbar-thumb:active {background-color: #999999;}
-		&::-webkit-scrollbar-thumb:hover {background: #b3b3b3;box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);}
-		/* Estilos track de scroll */
-		&::-webkit-scrollbar-track {background: #e1e1e1;border-radius: 4px;}
-		&::-webkit-scrollbar-track:hover, &::-webkit-scrollbar-track:active {background: #d4d4d4;}
-		/* scrollling */
-		/* ANCHO DEL SCROLLING */
-		&::-webkit-scrollbar {width: 0;}
-		&::-webkit-scrollbar-thumb {background: #cccc;border-radius: 4px;}
-		&::-webkit-scrollbar-thumb:active {background: #999999;}
-		&::-webkit-scrollbar-thumb:hover {background: #b3b3b3;box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);}
-		&::-webkit-scrollbar-track {background: #e1e1e1;}
-		&::-webkit-scrollbar-track:active, &::-webkit-scrollbar-track:hover {background: #d4d4d4;}
 
 		@media (min-width: 960px){
 			width: 100%;
@@ -149,6 +154,9 @@
 
 		&--cList{
 
+			@media (min-width: 991px){
+				padding-bottom: 1.85rem;
+			}
 			/* PRIMER LISTA DE OPCIONES */
 			&--m{
 				&--item{
